[package]
name = "rust-ns-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.45", features = ["derive"] }
dockworker = "0.12.0"
futures = "0.3.31"
libc = "0.2.175"
ocipkg = "0.3.9"
sys-mount = "3.0.1"
tar = "0.4.44"
tokio = "1.47.1"
tokio-util = "0.7.16"
walkdir = "2.4"
