[package]
name = "rust-ns-overlay"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.45", features = ["derive"] }
dockworker = { git = "https://github.com/LeeTeng2001/dockworker.git" }
futures = "0.3.31"
libc = "0.2.175"
oci-spec = "0.8.2"
procfs = "0.17.0"
serde = "1.0.219"
serde_json = "1.0.143"
sys-mount = "3.0.1"
tar = "0.4.44"
tokio = "1.47.1"
tokio-util = "0.7.16"
vergen-git2 = "1.0.7"

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build"] }
